--- a/src/container/bio.hbs
+++ b/src/container/bio.hbs
@@ -1,124 +1,184 @@
-<div>
-	<main>
-		<header>
-			<h1>Biography of {{name}}</h1>
-		</header>
-		<section>
-			<b>{{name}} was born on {{birthdate}} in {{birthplace}}</b>
-			<br>
-			<br>
-			<b>{{name}} died on {{deathdate}} and was buried in the {{deathplace}}</b>
-			<br>
-			<br>
-			<i>Nationality: {{nationality}}</i>
-			<br>
-			<br>
-			<i>Occupation: {{occupation}}</i>
-			<br>
-			<div>
-				<h3>He was known for:</h3>
-				<ul>
-					{{#each known_for}}
-					<li>{{this}}</li>
-					{{/each}}
-				</ul>
-			</div>
-		</section>
-	</main>
-</div>
+<main class='p-5'>
+    <section class='col-12'>
+        <div class='card'>
+            <div class='card-body'>
+                <div class='row'>
+                    <div class='col-6'>
+                        <h6 class='mb-0 text-start'>Ім'я Прізвище</h6>
+                    </div>
+                    <div class='col-6'>
+                        <h6 class='mb-0 text-end'>Resume Project</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <h1 class='text-center mt-4'>Biography of {{name}}</h1>
+    <section>
+        <div class='card border-info'>
+            <div class='card-body'>
+                <div class='row'>
+                    <section class='col-6'>
+                        <p class='mb-2 text-start'><b>{{name}} was born on {{birthdate}} in {{birthplace}}</b></p>
 
-<hr>
+                        <p class='mb-0 text-start'><i>Nationality: {{nationality}}</i></p>
+                    </section>
+                    <section class='col-6'>
+                        <p class='mb-2 text-end'><b>{{name}} died on {{deathdate}} and was buried in the {{deathplace}}</b></p>
 
-<div>
-	<main>
-		<header>
-			<h2>Life path</h2>
-		</header>
-		<section>
-			<h3>Educations</h3>
-			{{#each education}}
-			<b>Degree: {{degree}}</b>
-			<br>
-			<br>
-			<i>Science: {{field}}</i>
-			<br>
-			<br>
-			<b>He entered the {{institution}} in {{year}}</b>
-			{{/each}}
-			<br>
-			<br>
-			<h3>Publications</h3>
-			{{#each notable_publications}}
-			<ul>
-				<li>
-					{{title}} - {{year}}
-					<br>
-					<p>Publisher: {{publisher}}</p>
-				</li>
-			</ul>
-			{{/each}}
-			<br>
-			<h3>His Partners</h3>
-			{{#each partners}}
-			<ul>
-				<li>
-					{{name}} - {{relationship}}
-					<br>
-					<br>
-					<b>He was married for {{years}} years</b>
-				</li>
-			</ul>
-			{{/each}}
-			<br>
-			<h3>Achievements</h3>
-			{{#each awards}}
-			<p>Award: {{title}}</p>
-			<b>He was awarded in {{year}}</b>
-			<br>
-			<br>
-			<em>Desc: {{description}}</em>
-			{{/each}}
-			<br>
-			<h3>Influences</h3>
-			{{#each influences}}
-			<ul>
-				<li>{{this}}</li>
-			</ul>
-			{{/each}}
-			<br>
-			<h3>Influenced by:</h3>
-			{{#each influenced}}
-			<ul>
-				<li>{{this}}</li>
-			</ul>
-			{{/each}}
-			<br>
-			<h3>Quotes</h3>
-			{{#each quotes}}
-			<ul>
-				<li>
-					<q>{{this}}</q>
-				</li>
-			</ul>
-			{{/each}}
-			<br>
-			<h3>Major Discoveries</h3>
-			{{#each major_discoveries}}
-			<em>{{title}} - Discovered in {{year}}</em>
-			<p>Desc: {{description}}</p>
-			{{/each}}
-			<br>
-			<h3>Contributions</h3>
-			{{#with contributions}}
-			<p>Type: {{title}}</p>
-			<b>Desc: {{description}}</b>
-			<br>
-			<br>
-			<b>Discovered in {{year}}</b>
-			<br>
-			<br>
-			<i>Field: {{field}}</i>
-			{{/with}}
-		</section>
-	</main>
-</div>
+                        <p class='mb-0 text-end'><i>Occupation: {{occupation}}</i></p>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <h2 class='mt-3 text-center'>He was known for</h2>
+        <ul class='list-group'>
+            {{#each known_for}}
+                <li class='list-group-item list-group-item-info text-center'>{{this}}</li>
+            {{/each}}
+        </ul>
+    </section>
+
+    <hr class='mt-5 mb-3' />
+
+    <h2 class='text-center mb-3'>Life path</h2>
+    <section class='row gy-4'>
+        <div class='card-group'>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3>1. Educations</h3>
+                        {{#each education}}
+                            <p class='mb-2'><b>Degree: {{degree}}</b></p>
+
+                            <p class='mb-2'><i>Science: {{field}}</i></p>
+
+                            <p class='mb-0'><b>He entered the {{institution}} in {{year}}</b></p>
+                        {{/each}}
+                    </div>
+                </div>
+            </section>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3 class='mb-0'>2. Publications</h3>
+                    </div>
+                    <ol class='list-group list-group-flush list-group-numbered'>
+                        {{#each notable_publications}}
+                            <li class='list-group-item text-bg-info'>
+                                {{title}}
+                                -
+                                {{year}}
+
+                                <p class='mb-0 mt-2'>Publisher: {{publisher}}</p>
+                            </li>
+                        {{/each}}
+                    </ol>
+                </div>
+            </section>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3 class='mb-0'>3. Partners</h3>
+                    </div>
+                    <ol class='list-group list-group-numbered list-group-flush'>
+                        {{#each partners}}
+                            <li class='list-group-item text-bg-info'>
+                                {{name}}
+                                -
+                                {{relationship}}
+
+                                <p class='mb-0 mt-2'><b>He was married for {{years}} years</b></p>
+                            </li>
+                        {{/each}}
+                    </ol>
+                </div>
+            </section>
+        </div>
+        <div class='card-group'>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3>4. Achievements</h3>
+                        {{#each awards}}
+                            <p class='mb-2'>{{title}}</p>
+                            <p class='mb-2'><b>He was awarded in {{year}}</b></p>
+
+                            <p class='mb-0'><em>{{description}}</em></p>
+                        {{/each}}
+                    </div>
+                </div>
+            </section>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3>5. Influences</h3>
+                    </div>
+                    <ul class='list-group list-group-flush'>
+                        {{#each influences}}
+                            <li class='list-group-item text-bg-info'>{{this}}</li>
+                        {{/each}}
+                    </ul>
+                </div>
+            </section>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3>6. Influenced by:</h3>
+                    </div>
+                    <ul class='list-group list-group-flush'>
+                        {{#each influenced}}
+                            <li class='list-group-item text-bg-info'>{{this}}</li>
+                        {{/each}}
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <div class='card-group'>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3>7. Quotes</h3>
+                        {{#each quotes}}
+                            <p class='mt-2 mb-0'><q>{{this}}</q></p>
+                        {{/each}}
+                    </div>
+                </div>
+            </section>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    <div class='card-body'>
+                        <h3>8. Major Discoveries</h3>
+                        {{#each major_discoveries}}
+                            <p class='mb-2'><em>{{title}} - Discovered in {{year}}</em></p>
+                            <p class='mb-0'>{{description}}</p>
+                        {{/each}}
+                    </div>
+                </div>
+            </section>
+            <section class='col-4'>
+                <div class='card text-bg-info'>
+                    <img src='https://picsum.photos/400/200' class='card-img-top' alt='Cinque Terre' />
+                    {{#with contributions}}
+                        <div class='card-body'>
+                            <h3>9. Contributions</h3>
+                            <p class='mb-2'>Type: {{title}}</p>
+                            <p class='mb-2'><b>Desc: {{description}}</b></p>
+
+                            <p class='mb-0'><b>Discovered in {{year}}</b></p>
+                        </div>
+                        <div class='card-footer'><p class='mb-0'><i>{{field}}</i></p></div>
+                    {{/with}}
+                </div>
+            </section>
+        </div>
+    </section>
+</main>
